--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,8 +39,12 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: test
-    # Run only on pushing a tag
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    environment:
+      name: pypi
+      url: https://pypi.org/p/pytest-django-docker-pg/
+    permissions:
+      id-token: write
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -57,9 +61,5 @@ jobs:
     - name: Check dists
       run:
         twine check dist/*
-    - name: PyPI upload
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: |
-        twine upload dist/*
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
