--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,11 @@
-pytest==7.4.4
+pytest
 isort==5.13.2
 flake8==7.0.0
 black==23.12.1
 setuptools==69.0.3
 wheel==0.42.0
 twine==4.0.2
-pyright==1.1.348
+pyright==1.1.349
 
 docker==7.0.0
 
